--- a/css/BP/homepage.css
+++ b/css/BP/homepage.css
@@ -1,125 +1,61 @@
-body{
-    background-image:url("../../images/BP/bg.jpg");
+.wrapper-1
+{
+ background-image: url('../../images/covended/bg-hand.png');
+ background-size:contain;
+ background-repeat:no-repeat;
+ height:844px;
+ position:relative;
 }
-
-#container {
-    margin:20px auto 0 auto;
-    position:relative;
-    width:900px;
-    padding:20px;
-    background-color:#222;
-    border-top:20px solid #222;
-    border-bottom:20px solid #222;
-    background-color:#212121;
-
-    -moz-box-shadow: 0px 0px 20px rgba(0,0,0,1);
-    -webkit-box-shadow: 0px 0px 20px rgba(0,0,0,1);
-    box-shadow: 0px 0px 20px rgba(0,0,0,1);
-    background-image:url("../../images/BP/bg_int.jpg");
+.wrapper-1 a
+{
+ display:block;
 }
-
-*{
-    letter-spacing:1px;
-    font-family:"Helvetica",verdana;
-    color:#cdcdcd;
+.wrapper-1-logo
+{
+ width: 100%;
+ text-align: center;
+ padding-top: 25px;
+ position:absolute;
 }
-
-nav ul li {
-    float:left;
-    width:100px;
-    height:35px;
-    margin-left:20px;
-
+.wrapper-1-content{
+	position: fixed;
+    left: 60px;
+    top: 190px;
 }
-
-#container nav ul li.active a {
-    color:#fff;
-    text-shadow:1px 1px 0 rgba(255,255,255,0.5);
+.wrapper-1-nav ul {
+    margin: 0; 
+    padding: 0;
+    width:185px;
+    list-style-type: none;
 }
-
-#container nav ul li a{
-    /* Do rounding (native in Safari, Firefox and Chrome) */
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    font-size:20px;
-    text-shadow:1px 1px 0 rgba(255,255,255,1);
-    text-decoration:none;
-    text-align:center;
+.wrapper-1-nav{
+}
+.wrapper-1-nav ul li{
+      height:50px;
+}
+.wrapper-1-nav ul li a {
+    text-decoration: none;
+    color: #FF4102; 
+    padding: 0px 0px;
     display:block;
-    line-height:1.7;
-    width:100%;
-    height:100%;
-    color:#607890;
-    background-color:#000;
-    font-family:"Lobster",serif;
-    /* Firefox */
-    -moz-transition: all 0.3s ease;
-    /* WebKit */
-    -webkit-transition: all 0.3s ease;
-    /* Opera */
-    -o-transition: all 0.3s ease;
-    /* Standard */
-    transition: all 0.3s ease;
+    cursor: pointer;
+    width: 185px;
 }
-
-#container nav ul li a:hover{
-    color:#fff;
-    background-color:#799fb2;
-    text-shadow:1px 1px 0 rgba(0,0,0,1);
-    
+ .wrapper-1-nav ul li span{
+    width: 22px;
+	height: 20px;
+	float: right;
+	background-color: #FF4102;
+	text-align: center;
+	display: none;
 }
-
-h2 {
-    color:#607890;
-    font-family:"Lobster",serif;
-    text-shadow:1px 1px 0 rgba(255,255,255,1);
-    font-size:80px;
-    /* Firefox */
-    -moz-transition: -moz-transform 0.3s ease;
-    /* WebKit */
-    -webkit-transition: -webkit-transform 0.3s ease;
-    /* Opera */
-    -o-transition: -o-transform 0.3s ease;
-    /* Standard */
-    transition: all 0.3s ease;
+.wrapper-1-nav ul li a:visited {
+    border-bottom: 1px solid white;
+    transition: width 3s ease-in-out;
 }
-
-h2:hover {
-    /* Firefox */
-
--moz-transform: rotate(1deg);
-
-/* WebKit */
-
--webkit-transform: rotate(1deg);
-
-/* Opera */
-
--o-transform: rotate(1deg);
-
-/* Standard */
-
-transform: rotate(1deg);
+ 
+.wrapper-1-nav ul li a:hover, .wrapper-1-nav ul li .current {
+    color: white;
+    border-bottom: 1px solid white;
+    transition: width 3s ease-in-out;
 }
-
-p, li {
-    font-size:12px;
-    text-shadow:1px 1px 0 rgba(0,0,0,0.8);
-}
-
-h3 {
-    margin-top:35px;
-    font-weight:normal;
-    color:#607890;
-    font-family:"Puritan",serif;
-    font-size:20px;
-    text-shadow:2px 2px 0 rgba(0,0,0,0.5);
-}
-
-#logo{
-    position:absolute;
-    top:310px;
-    left:600px;
-
-}
-
