--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
+html,body {
+    height:100%;
+    min-height:100%;
+    margin:0;
+}
 
 html,
 button,
