--- a/css/slidercss/style2.css
+++ b/css/slidercss/style2.css
@@ -4,7 +4,7 @@
 	position: relative;
 	margin: 30px auto;
 	overflow: hidden;
-	background: transparent url(../images/waves.gif) repeat 0% 0%;
+	/*background: transparent url(../../images/sliderimages/waves.gif) repeat 0% 0%;
 	/*border-top: 8px solid #efc34a;
 	border-bottom: 8px solid #efc34a;
 	box-shadow: 0px 1px 1px rgba(0,0,0,0.2), 0px -2px 1px #fff; */
@@ -55,13 +55,13 @@
 	opacity: 1;
 }
 .da-slide h2{
-	color: #fff;
+	color: #ff3f00;
 	font-size: 45px;
 	top: 60px;
 	white-space: nowrap;
 	z-index: 10;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
-	font-family: 'Economica', Arial, sans-serif;
+	font-family: GothamMedium;
 	font-weight: 700;
 	left:0;
 	right: 0;
@@ -118,32 +118,22 @@
 .da-dots span{
 	display: inline-block;
 	position: relative;
-	width: 12px;
-	height: 12px;
+	width: 20px;
+	height: 20px;
 	border-radius: 50%;
-	background: #e4b42d;
-	margin: 3px;
+	margin: 10px;
 	cursor: pointer;
-	box-shadow: 
-		1px 1px 1px rgba(0,0,0,0.1) inset, 
-		1px 1px 1px rgba(255,255,255,0.1);
+	border: 1px solid #ff4700;
 }
 .da-dots span.da-dots-current:after{
 	content: '';
 	width: 8px;
 	height: 8px;
 	position: absolute;
-	top: 2px;
-	left: 2px;
+	top: 6px;
+	left: 6px;
 	border-radius: 50%;
-	background: rgb(255,255,255);
-	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(47%,rgba(246,246,246,1)), color-stop(100%,rgba(237,237,237,1)));
-	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%);
-	background: -o-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%);
-	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%);
-	background: linear-gradient(top, rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 );
+	background: #ff4700;
 }
 .da-arrows{
 	-moz-user-select: none;
